# Local-Pass

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
src/: auth.rs  install.rs  main.rs  server.rs
wix/: main.wxs
