[package]
name = "local-pass"
version = "0.1.0-alpha"
edition = "2021"
authors = ["Joseph Wander <josephwander@gmail.com>"]
license = "MIT"
description = "Expose your Windows machine to a remote AI via secure tunnel + bearer token"
repository = "https://github.com/AIWander/Local-Pass"
readme = "README.md"
rust-version = "1.75"

[[bin]]
name = "local-pass"
path = "src/main.rs"

[dependencies]
anyhow = "1"
serde_json = "1"
chrono = "0.4"
dirs = "5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
