[package]
name = "local-pass"
version = "0.1.2-alpha"
edition = "2021"
authors = ["Joseph Wander <josephwander@gmail.com>"]
license = "MIT"
description = "Expose your Windows machine to a remote AI via secure tunnel + bearer token"
repository = "https://github.com/AIWander/Local-Pass"
readme = "README.md"
rust-version = "1.75"

[[bin]]
name = "local-pass"
path = "src/main.rs"

[dependencies]
anyhow = "1"
serde_json = "1"
chrono = "0.4"
dirs = "5"
rand = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "io-util", "fs"] }
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
serde = { version = "1", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
